Updated template to reflect use of redis and newer pinnings

--- a/voteit/scaffolds/buildout_template/buildout.cfg
+++ b/voteit/scaffolds/buildout_template/buildout.cfg
@@ -1,15 +1,16 @@
 [buildout]
-extends = http://static.voteit.se/defaults-production-arche.cfg
+extends = http://static.voteit.se/defaults-production-arche2.cfg
 
 eggs +=
     voteit.debate
     voteit.irl
     voteit.schulze
     voteit.printable
+    voteit.dutt
     pyramid_exclog
+    pyramid_retry
 
-eggs -=
 
 [crontab-pack]
-# m h   dom mon dow | pack tuesday night
-times = 00 05   * *  1
+# m h   dom mon dow | pack monday morning
+times = 00 04   * *  1
