--- a/voteit/scaffolds/buildout_template/etc/development.ini
+++ b/voteit/scaffolds/buildout_template/etc/development.ini
@@ -12,7 +12,6 @@ pyramid.includes =
 
 
 #Transaction manager config for package: pyramid_tm
-tm.attempts = 3
 tm.commit_veto = pyramid_tm.default_commit_veto
 #ZODB config for package: pyramid_zodbconn
 zodbconn.uri = file://%(here)s/../var/Data.fs?blobstorage_dir=%(here)s/../var/blob
@@ -24,14 +23,13 @@ arche.timezone = Europe/Stockholm
 arche.salt_file = %(here)s/../var/salt.txt
 arche.cache_max_age = 7200
 arche.hash_method = voteit.core.security.get_sha_password
-default_poll_method = schulze_stv
+default_poll_method = schulze
 
 
 #List any extra plugins you'll want to use here
-plugins = 
+plugins =
     voteit.core.plugins.majority_poll
     voteit.core.plugins.gravatar_profile_image
-    voteit.core.plugins.like_button
     voteit.schulze
     voteit.debate
     voteit.irl
@@ -46,8 +44,9 @@ pipeline =
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
-#debug = True
+debug = True
 bottom = True
+rollup = False
 
 
 [server:main]
@@ -55,7 +54,6 @@ use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
 threads = 1
-url_scheme = http
 
 
 # Begin logging configuration
