--- a/voteit/scaffolds/buildout_template/etc/supervisord.conf
+++ b/voteit/scaffolds/buildout_template/etc/supervisord.conf
@@ -1,6 +1,7 @@
 [unix_http_server]
 file=%(here)s/../var/supervisor.sock
 
+
 [supervisord]
 logfile=%(here)s/../var/log/supervisord.log
 logfile_maxbytes=10MB
@@ -9,11 +10,14 @@ loglevel=info
 pidfile=%(here)s/../var/supervisord.pid
 nodaemon=false
 
+
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
+
 [supervisorctl]
-serverurl = unix://%(here)s/../var/supervisor.sock
+serverurl=unix://%(here)s/../var/supervisor.sock
+
 
 [program:voteit]
 command = %(here)s/../bin/pserve %(here)s/../etc/production.ini process_num=%(process_num)01d
@@ -25,8 +29,22 @@ stdout_logfile_backups=20
 numprocs=1
 numprocs_start=0
 
+
 [program:zeo]
 command = %(here)s/../bin/runzeo -C %(here)s/zeo.conf
 redirect_stderr = true
 stdout_capture_maxbytes=10MB
 stdout_logfile_backups=20
+user=voteit
+directory = %(here)s/..
+stopwaitsecs=5
+
+
+[program:redis]
+command = %(here)s/../bin/redis-server
+redirect_stderr = true
+stdout_capture_maxbytes=10MB
+stdout_logfile_backups=20
+user=voteit
+directory = %(here)s/..
+stopwaitsecs=5
